[package]
name = "funkus_cards"
description = "A collection of utilities for card-based systems in the Bevy game engine"
authors = ["Studio Funkus"]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/StudioFunkus/funkus_cards"
homepage = "https://github.com/StudioFunkus/funkus_cards"
publish = false

#=== Profile Settings ===#
[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
panic = "abort"
debug = 0
strip = true
lto = "thin"
codegen-units = 1

#=== Dependencies ===#
[dependencies]
bevy_app = { version = "^0.16.1", default-features = false }
bevy_core_pipeline = { version = "^0.16.1", default-features = false }
bevy_ecs = { version = "^0.16.1", default-features = false }
bevy_log = { version = "^0.16.1", default-features = false }
bevy_math = { version = "^0.16.1", default-features = false }
bevy_picking = { version = "^0.16.1", default-features = false }
bevy_reflect = { version = "^0.16.1", default-features = false }
bevy_render = { version = "^0.16.1", default-features = false }
bevy_transform = { version = "^0.16.1", default-features = false }

bevy-inspector-egui = { version = "0.31", optional = true }
bevy_lunex = { version = "^0.4.1" }
bevy_tweening = { version = "^0.13.0" }

rand = { version = "^0.9.1" }

[dev-dependencies]
bevy = { version = "^0.16.1", default-features = true }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[features]
default = ["dev"]
dev = ["bevy-inspector-egui"]